build_files/lib/error/test/lib/utils/sources/utils.c
/*
** EPITECH PROJECT, 2025
** sources - newcsfml.c
** File description:
** <description>
*/

#include "../includes/utils.h"

void utils_exist(void)
{
}
